change plt option

--- a/back/detecting_api.ipynb
+++ b/back/detecting_api.ipynb
@@ -108,10 +108,13 @@
     "\n",
     "    # 그래프 생성\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(bounding_box_counts)\n",
-    "    plt.xlabel(\"Frame\")\n",
-    "    plt.ylabel(\"Bounding Box Count\")\n",
-    "    plt.title(\"Bounding Box Count per Frame\")\n",
+    "    plt.plot(bounding_box_counts, linewidth=3, alpha=0.8)  \n",
+    "\n",
+    "    max_val = max(bounding_box_counts)\n",
+    "    min_val = min(bounding_box_counts)\n",
+    "\n",
+    "    plt.axhline(y=max_val - 0.6, color='lightgray', linestyle='--') \n",
+    "\n",
     "    plt.tight_layout()\n",
     "\n",
     "    graph_buffer = io.BytesIO()\n",
