fix:change video frame processing

--- a/back/detecting_api.ipynb
+++ b/back/detecting_api.ipynb
@@ -70,6 +70,9 @@
     "    frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "    frame_area = frame_width * frame_height\n",
     "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    process_fps = 5\n",
+    "    frame_interval = int(fps / process_fps)\n",
     "\n",
     "    bounding_box_counts = []\n",
     "\n",
@@ -80,22 +83,23 @@
     "\n",
     "    out = cv2.VideoWriter(TARGET_VIDEO_PATH, cv2.VideoWriter_fourcc(*'mp4v'), 20.0, (frame_width, frame_height))\n",
     "\n",
-    "    for _ in tqdm(range(frame_count)):\n",
+    "    for frame_idx in tqdm(range(frame_count)):\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
     "            break\n",
     "\n",
-    "        results = model.infer(frame, confidence=0.002)\n",
-    "        detections = sv.Detections.from_inference(results).with_nms(threshold=0.07)\n",
-    "        detections = detections[(detections.area / frame_area) < 0.10]\n",
+    "        if frame_idx % frame_interval == 0:\n",
+    "            results = model.infer(frame, confidence=0.1)\n",
+    "            detections = sv.Detections.from_inference(results).with_nms(threshold=0.1)\n",
+    "            detections = detections[(detections.area / frame_area) < 0.5]\n",
     "\n",
-    "        bounding_box_count = len(detections)\n",
-    "        bounding_box_counts.append(bounding_box_count)\n",
+    "            bounding_box_count = len(detections)\n",
+    "            bounding_box_counts.append(bounding_box_count)\n",
     "\n",
-    "        annotated_frame = frame.copy()\n",
-    "        annotated_frame = BOUNDING_BOX_ANNOTATOR.annotate(annotated_frame, detections)\n",
-    "        annotated_frame = LABEL_ANNOTATOR.annotate(annotated_frame, detections)\n",
-    "        out.write(annotated_frame)\n",
+    "            annotated_frame = frame.copy()\n",
+    "            annotated_frame = BOUNDING_BOX_ANNOTATOR.annotate(annotated_frame, detections)\n",
+    "            annotated_frame = LABEL_ANNOTATOR.annotate(annotated_frame, detections)\n",
+    "            out.write(annotated_frame)\n",
     "\n",
     "    cap.release()\n",
     "    out.release()\n",
