feature:add deepl for translation

--- a/back/detecting_api.ipynb
+++ b/back/detecting_api.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "!pip install -q inference-gpu[yolo-world]==0.9.12rc1\n",
     "!pip install -q supervision==0.19.0rc3\n",
     "!pip install fastapi uvicorn\n",
     "!pip install python-multipart\n",
-    "!pip install pyngrok"
+    "!pip install pyngrok\n",
+    "!pip install deepl"
    ]
   },
   {
@@ -31,7 +33,7 @@
     "from pyngrok import ngrok\n",
     "import nest_asyncio\n",
     "import os\n",
-    "\n",
+    "import deepl\n",
     "# FastAPI 앱 설정\n",
     "app = FastAPI()\n",
     "\n",
@@ -60,7 +62,13 @@
     "    video_name = os.path.basename(video_url)\n",
     "    video_name_without_ext = os.path.splitext(video_name)[0]\n",
     "\n",
-    "    model.set_classes([object_name])  # 클래스 이름 설정\n",
+    "    auth_key = \"AUTHORIZATION TOKEN\"\n",
+    "    translator = deepl.Translator(auth_key)\n",
+    "\n",
+    "    result = translator.translate_text(object_name, target_lang=\"EN-US\")\n",
+    "    classes = [cls.strip() for cls in result.text.split(',')]\n",
+    "    print(classes)\n",
+    "    model.set_classes(classes)  # 클래스 이름 설정\n",
     "\n",
     "    cap = cv2.VideoCapture(video_url)\n",
     "    if not cap.isOpened():\n",
