fix:change plot logic

--- a/back/detecting_api.ipynb
+++ b/back/detecting_api.ipynb
@@ -34,6 +34,11 @@
     "import nest_asyncio\n",
     "import os\n",
     "import deepl\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from scipy.ndimage import gaussian_filter1d\n",
+    "from scipy.interpolate import make_interp_spline\n",
+    "\n",
     "# FastAPI 앱 설정\n",
     "app = FastAPI()\n",
     "\n",
@@ -82,7 +87,8 @@
     "    process_fps = 5\n",
     "    frame_interval = int(fps / process_fps)\n",
     "\n",
-    "    bounding_box_counts = []\n",
+    "    # 각 클래스별 바운딩 박스 수를 저장할 딕셔너리 초기화\n",
+    "    bounding_box_counts = {cls: [] for cls in classes}\n",
     "\n",
     "    # 아웃풋 동영상 경로 설정\n",
     "    output_dir = os.path.join(os.getcwd(), 'output_asset')\n",
@@ -97,12 +103,19 @@
     "            break\n",
     "\n",
     "        if frame_idx % frame_interval == 0:\n",
-    "            results = model.infer(frame, confidence=0.1)\n",
+    "            results = model.infer(frame, confidence=0.08)\n",
     "            detections = sv.Detections.from_inference(results).with_nms(threshold=0.1)\n",
     "            detections = detections[(detections.area / frame_area) < 0.5]\n",
     "\n",
-    "            bounding_box_count = len(detections)\n",
-    "            bounding_box_counts.append(bounding_box_count)\n",
+    "            # 각 클래스별 바운딩 박스 수를 세기\n",
+    "            class_counts = {cls: 0 for cls in classes}\n",
+    "            for det in detections:\n",
+    "                class_name = det[5]['class_name']  # det의 5번째 요소에서 class_name 가져오기\n",
+    "                if class_name in class_counts:\n",
+    "                    class_counts[class_name] += 1\n",
+    "            \n",
+    "            for cls in classes:\n",
+    "                bounding_box_counts[cls].append(class_counts[cls])\n",
     "\n",
     "            annotated_frame = frame.copy()\n",
     "            annotated_frame = BOUNDING_BOX_ANNOTATOR.annotate(annotated_frame, detections)\n",
@@ -112,35 +125,49 @@
     "    cap.release()\n",
     "    out.release()\n",
     "\n",
-    "    total_bounding_boxes = sum(bounding_box_counts)\n",
+    "    total_bounding_boxes = sum(sum(counts) for counts in bounding_box_counts.values())\n",
+    "\n",
+    "    # 객체 수 저장\n",
+    "    frame_detections = [(i * frame_interval, {cls: bounding_box_counts[cls][i] for cls in classes}) for i in range(len(bounding_box_counts[classes[0]]))]\n",
+    "    with open(f'{video_name_without_ext}_detections.pkl', 'wb') as f:\n",
+    "        pickle.dump(frame_detections, f)\n",
     "\n",
     "    # 비디오 파일을 Base64로 인코딩\n",
     "    with open(TARGET_VIDEO_PATH, \"rb\") as video_file:\n",
     "        video_base64 = base64.b64encode(video_file.read()).decode('utf-8')\n",
     "\n",
-    "    # 그래프 생성\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(bounding_box_counts, linewidth=3, alpha=0.8)  \n",
+    "    # 그래프 시각화\n",
+    "    fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "    for cls in classes:\n",
+    "        counts_smoothed = gaussian_filter1d(bounding_box_counts[cls], sigma=2)\n",
+    "        frames_np = np.arange(len(bounding_box_counts[cls]))\n",
+    "        spline = make_interp_spline(frames_np, counts_smoothed, k=3)\n",
+    "        frames_smooth = np.linspace(frames_np.min(), frames_np.max(), 500)\n",
+    "        counts_smooth = spline(frames_smooth)\n",
+    "        ax.plot(frames_smooth, counts_smooth, label=cls, linewidth=3)\n",
     "\n",
-    "    max_val = max(bounding_box_counts)\n",
-    "    min_val = min(bounding_box_counts)\n",
+    "    threshold = min(min(gaussian_filter1d(bounding_box_counts[cls], sigma=2)) for cls in classes) + 0.5\n",
+    "    ax.axhline(y=threshold, color='black', linestyle='--')\n",
     "\n",
-    "    plt.axhline(y=max_val - 0.6, color='lightgray', linestyle='--') \n",
+    "    # ax.set_title('Object Detection Count per Frame')\n",
+    "    # ax.set_xlabel('Frame Index')\n",
+    "    # ax.set_ylabel('Count')\n",
+    "    ax.legend()\n",
+    "    ax.grid(False)\n",
     "\n",
-    "    plt.tight_layout()\n",
-    "\n",
-    "    graph_buffer = io.BytesIO()\n",
+    "    # 그래프를 PNG로 저장\n",
     "    graph_path = os.path.join(output_dir, f'{video_name_without_ext}_result.png')\n",
-    "    plt.savefig(graph_buffer, format='png')  # 그래프를 버퍼에 저장\n",
-    "    graph_buffer.seek(0)\n",
-    "    graph_data = graph_buffer.getvalue()\n",
-    "    graph_base64 = base64.b64encode(graph_data).decode('utf-8')\n",
+    "    plt.savefig(graph_path)\n",
+    "\n",
+    "    # 그래프를 Base64로 인코딩\n",
+    "    with open(graph_path, \"rb\") as image_file:\n",
+    "        graph_base64 = base64.b64encode(image_file.read()).decode('utf-8')\n",
     "\n",
     "    return {\n",
     "        \"total_bounding_boxes\": total_bounding_boxes,\n",
     "        \"graph_data\": graph_base64,\n",
-    "        \"video_data\": video_base64,  # Base64 인코딩된 비디오 데이터\n",
-    "        \"graph_path\": graph_path  # 그래프 이미지 경로\n",
+    "        \"video_data\": video_base64,\n",
+    "        \"graph_path\": graph_path\n",
     "    }\n",
     "\n",
     "# ngrok 설정 및 FastAPI 서버 실행\n",
@@ -150,7 +177,9 @@
     "print(\"Public URL:\", ngrok_tunnel.public_url)\n",
     "\n",
     "import uvicorn\n",
-    "uvicorn.run(app, host=\"0.0.0.0\", port=8000)"
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    uvicorn.run(app, host=\"0.0.0.0\", port=8000)"
    ]
   }
  ],
